--- a/jasa_formatted/hillclimbing_jasa.tex
+++ b/jasa_formatted/hillclimbing_jasa.tex
@@ -7,7 +7,7 @@
 
 %\pdfminorversion=4
 % NOTE: To produce blinded version, replace "0" with "1" below.
-\newcommand{\blind}{0}
+\newcommand{\blind}{1}
 
 % DON'T change margins - should be 1 inch all around.
 \addtolength{\oddsidemargin}{-.5in}%
@@ -66,9 +66,14 @@
 
 \if1\blind
 {
+ 
   \title{\bf Tuning Parameter Selection based on Validation-Error Descent}
-  \author{Jean Feng\thanks{
-    The authors gratefully acknowledge \textit{please remember to list all relevant funding sources in the unblinded version}}\hspace{.2cm}\\
+    \author{Jean Feng
+    \thanks{
+    The authors gratefully acknowledge National Institutes of Health under award number [T32CA206089] and ???.
+    The content is solely the responsibility of the authors and does not necessarily represent the official views of the National Institutes of Health.
+    }
+    \hspace{.2cm}\\
     Department of Biostatistics, University of Washington\\
     and \\
     Noah Simon \\
