add funding info

--- a/jasa_formatted/hillclimbing_jasa.tex
+++ b/jasa_formatted/hillclimbing_jasa.tex
@@ -70,7 +70,8 @@
   \title{\bf Tuning Parameter Selection based on Validation-Error Descent}
     \author{Jean Feng
     \thanks{
-    The authors gratefully acknowledge National Institutes of Health under award number [T32CA206089] and ???.
+    Jean Feng was supported by NIH grant DP5OD019820 and T32CA206089.
+    Noah Simon was supported by NIH grant DP5OD019820.
     The content is solely the responsibility of the authors and does not necessarily represent the official views of the National Institutes of Health.
     }
     \hspace{.2cm}\\
